blog spacing fixed

--- a/styles/features.css
+++ b/styles/features.css
@@ -1,5 +1,5 @@
 .features {
-  @apply grid min-h-full w-full  items-center gap-4 px-container pt-20;
+  @apply grid min-h-full w-full  items-center gap-4 px-container;
   @media only screen and (min-width: 1010px) {
     grid-template-columns: 1fr auto;
   }
